service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-demo-app
  labels:
    app: prometheus-demo-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: prometheus-demo-app
